k8s/client-cluster-ip-service.yaml
apiVersion: v1
kind: Service
metadata:
    name: client-cluster-ip-service
spec:
    type: ClusterIP
    selector: # so that service knows what set of pods it needs to provide access to
        component: web # match the labels of the PODS (not the deployment) in client-deployment
    ports:
        - port: 3000
          targetPort: 3000
