k8s/ingress-service.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: ingress-service
  annotations: # higher-level config for ingress object created
    kubernetes.io/ingress.class: nginx # create ingress controller using nginx project
    nginx.ingress.kubernetes.io/use-regex: 'true'
    # how our copy of nginx behaves - remove the /api before sending to server
    nginx.ingress.kubernetes.io/rewrite-target: /$1
spec:
  rules:
    - http:
        paths:
          - path: /?(.*)
            backend:
                # no need to specify IP address, just need identifying name of service
              serviceName: client-cluster-ip-service
              servicePort: 3000
          - path: /api/?(.*)
            backend:
              serviceName: server-cluster-ip-service
              servicePort: 5000
